# autodo-mongoose

./: .gitmodules  CMakeLists.txt  README.md
include/: autodo.h
src/: http_server.c
test/: sample_server.lua
